changed the background image

--- a/Homepage.html
+++ b/Homepage.html
@@ -23,8 +23,8 @@
 
         <section class="two-column-section">
             <div class="about-column-text">
-                <h1 style="color: aliceblue;">Djoliba Agro Business</h1>
-                <p style="color: white; padding-right: 150px;">
+                <h1 style="color: rgb(188, 201, 176);">Djoliba Agro Business</h1>
+                <p style="color: rgba(29, 17, 2, 0.911); padding-right: 150px;">
                 ejkfhoiverjgmtgontreiogvpvnirjivfrjiojiofvnk 
                 ngfmreiookfoerkofnrfvnkgfnm vjrigvnjfnviogfvivkg bgfonb
                 fvnifjdfpovrdvkmslkdf jvndoskdmv fvnifjdfpovrdvkmslkdfmvjf
