Completely changed the product and Mission/Vision page.

--- a/Homepage.html
+++ b/Homepage.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name = "viewport" content="width=device_width, initial-scale=1.0">
+        <meta name = "viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="homestyle.css">
         <title>DJOLIBA Agro</title>
     </head>
@@ -38,10 +38,12 @@
             </div>
         </section>
 
-        <!--button style="align-self: flex-end;">→</button-->
+        <button style="align-self: flex-end;">→</button>
     
         <footer>
-           <p>© 2025 DJOLIBA AGRO BUSINESS. All rights reserved.</p>
+           <p>© 2025 Djoliba Agro Business. All rights reserved.</p>
         </footer>
     </body>
 </html>
+
+
