Completed the our service and contact us page

--- a/Homepage.html
+++ b/Homepage.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name = "viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="homestyle.css">
         <title>DJOLIBA Agro</title>
     </head>
@@ -37,12 +38,10 @@
                     class="decor-image">
             </div>
         </section>
-
-        <button style="align-self: flex-end;">→</button>
     
-        <footer>
-           <p>© 2025 Djoliba Agro Business. All rights reserved.</p>
-        </footer>
+        <div id="footer"></div>
+
+        <script src="layout.js"></script>
     </body>
 </html>
 
