--- a/Productpage.html
+++ b/Productpage.html
@@ -3,122 +3,121 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="productstyle.css" />
   </head>
   <body>
-    <header class="page-header">
-      <h1>OUR FRESH FARM PRODUCTS</h1>
-      <p>Naturally Grown ● Freshly Harvested ● Safe Delivery</p>
-    </header>
+        <header class="page-header">
+        <h1>OUR FRESH FARM PRODUCTS</h1>
+        <p>Naturally Grown ● Freshly Harvested ● Safe Delivery</p>
+        </header>
 
-    <main class="product-container">
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="Images/manwithpepper.jpeg" alt="Tomatoes" />
-        </div>
-        <h2>Tomatoes</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
+        <main class="product-container">
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="Images/manwithpepper.jpeg" alt="Tomatoes" />
+                </div>
+                <h2>Tomatoes</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>
+                <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+            </div>
 
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="Images/manwithpepper.jpeg" alt="Eggplant" />
-        </div>
-        <h2>Eggplant</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="Images/manwithpepper.jpeg" alt="Eggplant" />
+                </div>
+                <h2>Eggplant</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>
+                <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+            </div>
 
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="Images/manwithpepper.jpeg" alt="okra" />
-        </div>
-        <h2>Okra</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="Images/manwithpepper.jpeg" alt="okra" />
+                </div>
+                <h2>Okra</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>
+                <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+            </div>
 
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="" alt="cucumber" />
-        </div>
-        <h2>Cucumber</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="" alt="cucumber" />
+                </div>
+                <h2>Cucumber</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>
+                <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+            </div>
 
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="" alt="watermelon" />
-        </div>
-        <h2>Watermelon</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="" alt="watermelon" />
+                </div>
+                <h2>Watermelon</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>
+                <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+            </div>
 
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="" alt="banana" />
-        </div>
-        <h2>Banana</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="" alt="banana" />
+                </div>
+                <h2>Banana</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>
+                <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+            </div>
 
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="Images/carrot.jpg" alt="apples" />
-        </div>
-        <h2>Apple</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="Images/carrot.jpg" alt="apples" />
+                </div>
+                <h2>Apple</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>        <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+            </div>
 
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="Images/carrot.jpg" alt="orange" />
-        </div>
-        <h2>Orange</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="Images/carrot.jpg" alt="orange" />
+                </div>
+                <h2>Orange</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>
+                <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+            </div>
 
-      <div class="product-card">
-        <div class="image-wrapper">
-          <img src="Images/carrot.jpg" alt="carrot" />
-        </div>
-        <h2>Carrot</h2>
-        <p>Naturally grown tomatoes harvested at peak ripeness.</p>
-        <span class="price">$5.00 / kg</span>
-        <div class="button-wrapper">
-          <button class="order-btn">ORDER NOW</button>
-        </div>
-      </div>
-    </main>
-  </body>
+            <div class="product-card">
+                <div class="image-wrapper">
+                <img src="Images/carrot.jpg" alt="carrot" />
+                </div>
+                <h2>Carrot</h2>
+                <p>Naturally grown tomatoes harvested at peak ripeness.</p>
+                <div class="button-wrapper">
+                <button class="order-btn">ORDER NOW</button>
+                </div>
+
+            </div>
+
+        </main>
+
+        <div id="footer"></div>
+
+        <script src="layout.js"></script>
+
+    </body>
+
 </html>
