--- a/Servicepage.html
+++ b/Servicepage.html
@@ -1,14 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name = "viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="servicestyle.css">
-    </head>
-    <body>
-        <h1>OUR SERVICES</h1>
+        <head>
+            <meta charset="UTF-8">
+            <meta name = "viewport" content="width=device-width, initial-scale=1.0">
+            <link rel="stylesheet" href="main.css">
+            <link rel="stylesheet" href="servicestyle.css">
+        </head>
+        <body>
+            <header class="service-page-header">
+                <h1>OUR SERVICES</h1>
+                <p>The services we render at DJOLIBA Agro Business</p>
+            </header>
 
+            <section class="services-container">
+                <div class="service-card">
+                    <div class="service-image-wrapper">
+                    <img src="Images/womanwithveggies.jpeg" alt="Production of Fresh Farm Produce" />
+                    </div>
+                    <h2>Production of Fresh Farm Produce</h2>
+                    <p>We supply fresh, high-quality agricultural produce directly from farmers to consumers and businesses.</p>
+                </div>
 
+                    <div class="service-card">
+                        <div class="service-image-wrapper">
+                        <img src="Images/womanwithveggies.jpeg" alt="Transformation & Conservation" />
+                        </div>
+                    <h2>Transformation & Conservation</h2>
+                    <p>We supply fresh, high-quality agricultural produce directly from farmers to consumers and businesses.</p>
+                </div>
 
-    </body>
+                    <div class="service-card">
+                        <div class="service-image-wrapper">
+                        <img src="" alt="Logistics & Transportation" />
+                        </div>
+                    <h2>Logistics & Transportation</h2>
+                    <p>We supply fresh, high-quality agricultural produce directly from farmers to consumers and businesses.</p>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-image-wrapper">
+                    <img src="" alt="Import-Export" />
+                    </div>
+                    <h2>Produce Distribution</h2>
+                    <p>We supply fresh, high-quality agricultural produce directly from farmers to consumers and businesses.</p>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-image-wrapper">
+                    <img src="Images/womanwithveggies.jpeg" alt="Intermediation & Connection" />
+                    </div>
+                    <h2>Intermediation & Connection</h2>
+                    <p>We supply fresh, high-quality agricultural produce directly from farmers to consumers and businesses.</p>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-image-wrapper">
+                    <img src="Images/womanwithveggies.jpeg" alt="Training & Consultation" />
+                    </div>
+                    <h2>Training & Consultation</h2>
+                    <p>We supply fresh, high-quality agricultural produce directly from farmers to consumers and businesses.</p>
+                </div>
+
+                <div class="service-card">
+                    <div class="service-image-wrapper">
+                    <img src="Images/womanwithveggies.jpeg" alt="General Marketing" />
+                    </div>
+                    <h2>General Marketing</h2>
+                    <p>We supply fresh, high-quality agricultural produce directly from farmers to consumers and businesses.</p>
+                </div>
+
+            </section>
+
+            <div id="footer"></div>
+
+            <script src="layout.js"></script>
+
+        </body>
     </html>
