--- a/mvpage.html
+++ b/mvpage.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="mvstyle.css" />
   </head>
   <body>
@@ -73,8 +74,8 @@
       </div>
     </div>
 
-    <footer>
-      <p>&copy 2026 Djoliba Agro Business. All Rights Reserved.</p>
-    </footer>
+    <div id="footer"></div>
+
+    <script src="layout.js"></script>
   </body>
 </html>
