Update mission, vision and services page

--- a/Homepage.html
+++ b/Homepage.html
@@ -1,48 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name = "viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="homestyle.css">
-        <title>DJOLIBA Agro</title>
-    </head>
-    <body>
-        
-        <div class="navbar">
-            <img src="Images/logo.png" class = "logo"
-                alt="Business Logo"
-            >
-            <div class="nav-links">
-                <a href="Homepage.html">Home</a>
-                <a href="Productpage.html">Our Products</a>
-                <a href="mvpage.html">Mission & Vision</a>
-                <a href="Servicepage.html">Services</a>
-                <a href="ContactUspage.html">Contact Us</a>
-            </div>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="homestyle.css" />
+    <title>DJOLIBA Agro</title>
+  </head>
+  <body>
+    <div class="navbar">
+      <img src="Images/logo.png" class="logo" alt="Business Logo" />
+      <div class="nav-links">
+        <a href="Homepage.html">Home</a>
+        <a href="Productpage.html">Our Products</a>
+        <a href="mvpage.html">Mission & Vision</a>
+        <a href="Servicepage.html">Services</a>
+        <a href="ContactUspage.html">Contact Us</a>
+      </div>
+    </div>
 
-        <section class="two-column-section">
-            <div class="about-column-text">
-                <h1 style="color: #db8609;">Djoliba Agro Business</h1>
-                <p style="color: #f5f5dc; padding-right: 150px;">
-                ejkfhoiverjgmtgontreiogvpvnirjivfrjiojiofvnk 
-                ngfmreiookfoerkofnrfvnkgfnm vjrigvnjfnviogfvivkg bgfonb
-                fvnifjdfpovrdvkmslkdf jvndoskdmv fvnifjdfpovrdvkmslkdfmvjf
-                vnrtjgiotjgrk btoo/.
-                </p>
-            </div>
-            <div class="about-column-image"> 
-                <img src="Images/img1.png" 
-                    alt="agriculture graphics"
-                    class="decor-image">
-            </div>
-        </section>
-    
-        <div id="footer"></div>
+    <section class="two-column-section">
+      <div class="about-column-text">
+        <h1 style="color: #db8609">Djoliba Agro Business</h1>
+        <p style="color: #f5f5dc; padding-right: 150px">
+          ejkfhoiverjgmtgontreiogvpvnirjivfrjiojiofvnk
+          ngfmreiookfoerkofnrfvnkgfnm vjrigvnjfnviogfvivkg bgfonb
+          fvnifjdfpovrdvkmslkdf jvndoskdmv fvnifjdfpovrdvkmslkdfmvjf
+          vnrtjgiotjgrk btoo/.
+        </p>
+      </div>
+      <div class="about-column-image">
+        <img
+          src="Images/img1.png"
+          alt="agriculture graphics"
+          class="decor-image"
+        />
+      </div>
+    </section>
 
-        <script src="layout.js"></script>
-    </body>
+    <div id="footer"></div>
+
+    <script src="layout.js"></script>
+  </body>
 </html>
-
-
