--- a/mvpage.html
+++ b/mvpage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="mvstyle.css" />
   </head>
   <body>
@@ -15,31 +15,27 @@
       <div class="section">
         <h2>Our Mission</h2>
         <p>
-          To cultivate high-quality, sustainable agricultural products while
-          preserving our natural environment and nurturing the earth for future
-          generations. To empower local communities by providing accessible,
-          premium-grade produce through innovative farming practices and ethical
-          partnerships.
+          Produire, transformer et distribuer des fruits et légumes frais, sains
+          et accessibles afin de contribuer activement à la sécurité alimentaire
+          et à la valorisation du potentiel agricole guinéen.
         </p>
       </div>
 
       <div class="section">
         <h2>Our Vision</h2>
         <p>
-          To cultivate high-quality, sustainable agricultural products while
-          preserving our natural environment and nurturing the earth for future
-          generations. To empower local communities by providing accessible,
-          premium-grade produce through innovative farming practices and ethical
-          partnerships.
+          Moderniser l'agriculture guinéenne par la qualité, la structuration et
+          la coopération, tout en renforçant la sécurité alimentaire national et
+          la résilience économique communautés rurales
         </p>
       </div>
 
       <div class="section">
         <h2>Our Values</h2>
         <p>
-          To cultivate high-quality, sustainable agricultural products while
-          preserving our natural environment and nurturing the earth for future
-          generations.
+          Nos valeurs reposent sur l'Accessibilité, l'Innovation, l'Engagement
+          social et une Agriculture Durable, qui guident chacune de nos actions
+          au service des communautés.
         </p>
 
         <div class="values">
