Corrected the homepage

--- a/Homepage.html
+++ b/Homepage.html
@@ -23,10 +23,10 @@
       <div class="about-column-text">
         <h1 style="color: #db8609">Djoliba Agro Business</h1>
         <p style="color: #f5f5dc; padding-right: 150px">
-          ejkfhoiverjgmtgontreiogvpvnirjivfrjiojiofvnk
-          ngfmreiookfoerkofnrfvnkgfnm vjrigvnjfnviogfvivkg bgfonb
-          fvnifjdfpovrdvkmslkdf jvndoskdmv fvnifjdfpovrdvkmslkdfmvjf
-          vnrtjgiotjgrk btoo/.
+          Djoliba Agro Business is committed to providing fresh, high-quality farm products 
+          directly from trusted local farms. We focus on sustainable farming practices that 
+          ensure healthy produce and environmental responsibility. Our products are carefully 
+          harvested, processed, and delivered to maintain freshness and safety.
         </p>
       </div>
       <div class="about-column-image">
