Update contactUspages, Homepages, mvpage, Productpage and Servicepage,

--- a/ContactUspage.html
+++ b/ContactUspage.html
@@ -1,70 +1,80 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name = "viewport" content="width=device_width, initial-scale=1.0">
-        <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" href="contactstyle.css">
-    </head>
-    <body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device_width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="contactstyle.css" />
+  </head>
+  <body>
     <header class="contact-page-header">
-        <h1>Contact Us</h1>
+      <h1>Contactez-Nous</h1>
     </header>
 
     <section class="board-container">
-        <div class="board-card">
-            <div class="board-image-wrapper">
-                <img src="Images/ChatGPT Image Jan 25, 2026, 05_43_38 PM.png" alt="Board member image" />
-            </div>
-            <h2>Michel </h2>
-            <p>CEO</p>
+      <div class="board-card">
+        <div class="board-image-wrapper">
+          <img
+            src="Images/ChatGPT Image Jan 25, 2026, 05_43_38 PM.png"
+            alt="Board member image"
+          />
         </div>
+        <h2>Michel</h2>
+        <p>CEO</p>
+      </div>
 
-        <div class="board-card">
-            <div class="board-image-wrapper">
-                <img src="Images/ChatGPT Image Jan 25, 2026, 05_43_38 PM.png" alt="Board member image" />
-            </div>
-            <h2>Michel </h2>
-            <p>CEO</p>
+      <div class="board-card">
+        <div class="board-image-wrapper">
+          <img
+            src="Images/ChatGPT Image Jan 25, 2026, 05_43_38 PM.png"
+            alt="Board member image"
+          />
         </div>
+        <h2>Michel</h2>
+        <p>CEO</p>
+      </div>
 
-        <div class="board-card">
-            <div class="board-image-wrapper">
-                <img src="Images/ChatGPT Image Jan 25, 2026, 05_43_38 PM.png" alt="Board member image" />
-            </div>
-            <h2>Michel </h2>
-            <p>CEO</p>
+      <div class="board-card">
+        <div class="board-image-wrapper">
+          <img
+            src="Images/ChatGPT Image Jan 25, 2026, 05_43_38 PM.png.png"
+            alt="Board member image"
+          />
         </div>
+        <h2>Michel</h2>
+        <p>CEO</p>
+      </div>
 
-        <div class="board-card">
-            <div class="board-image-wrapper">
-                <img src="Images/ChatGPT Image Jan 25, 2026, 05_43_38 PM.png" alt="Board member image" />
-            </div>
-            <h2>Michel </h2>
-            <p>CEO</p>
+      <div class="board-card">
+        <div class="board-image-wrapper">
+          <img
+            src="Images/ChatGPT Image Jan 25, 2026, 05_43_38 PM.png"
+            alt="Board member image"
+          />
         </div>
-
+        <h2>Michel</h2>
+        <p>CEO</p>
+      </div>
     </section>
 
-    
     <div class="awareness-quote-card">
-        <h1>"Agriculture is the foundation of civilization and the backbone of every nation. 
-            The land feeds us when we care for it."
-        </h1>
+      <h1>
+        "L'agriculture est le fondement de la civilisation et l'épine dorsale de
+        chaque nation. La terre nous nourrit lorsque nous en prenons soin."
+      </h1>
     </div>
 
     <div class="contact-info-card">
-        <h2>For More Details</h2>
-        <p><strong>📍Address: </strong>Ankara, Turkey</p>
-        <p><strong>📩Email: </strong> djoliba.agro@gmail.com</p>
-        <p><strong>📞Phone: </strong> +224 623 73 8465 / +224 626 07 7961</p>
+      <h2>Pour plus de details</h2>
+      <p><strong>📍Address: </strong>Gbessia Condebougny, Conakry/Guinée</p>
+      <p><strong>📩Email: </strong> djoliba.agro@gmail.com</p>
+      <p>
+        <strong>📞Télephone: </strong> +224 623 73 84 65 / +224 626 07 79 61
+      </p>
     </div>
-
 
     <div id="footer"></div>
 
     <script src="layout.js"></script>
-
-
-    </body>
-    </html>
+  </body>
+</html>
