--- a/Homepage.html
+++ b/Homepage.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="homestyle.css" />
     <title>DJOLIBA Agro</title>
   </head>
+
   <body>
     <div class="navbar">
       <img src="Images/logo.png" class="logo" alt="Business Logo" />
       <div class="nav-links">
-        <a href="Homepage.html">Home</a>
-        <a href="Productpage.html">Our Products</a>
+        <a href="Homepage.html">Accueil</a>
+        <a href="Productpage.html">Nos Produits</a>
         <a href="mvpage.html">Mission & Vision</a>
         <a href="Servicepage.html">Services</a>
-        <a href="ContactUspage.html">Contact Us</a>
+        <a href="ContactUspage.html">Contact</a>
       </div>
     </div>
 
@@ -23,15 +24,13 @@
       <div class="about-column-text">
         <h1 style="color: #db8609">Djoliba Agro Business</h1>
         <p style="color: #f5f5dc; padding-right: 150px">
-          Djoliba Agro Business is committed to providing fresh, high-quality farm products 
-          directly from trusted local farms. We focus on sustainable farming practices that 
-          ensure healthy produce and environmental responsibility. Our products are carefully 
-          harvested, processed, and delivered to maintain freshness and safety.
+          Nous croyons que chacun mérite des fruits et légumes frais, savoureux
+          et fiables
         </p>
       </div>
       <div class="about-column-image">
         <img
-          src="Images/img1.png"
+          src="Images/.jpeg"
           alt="agriculture graphics"
           class="decor-image"
         />
