--- a/Servicepage.html
+++ b/Servicepage.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <header class="service-page-header">
-      <h1>OUR SERVICES</h1>
-      <p>The services we render at DJOLIBA Agro Business</p>
+      <h1>NOS SERVICES</h1>
+      <p>Les services que nous rendons à DJOLIBA Agro Business</p>
     </header>
 
     <section class="services-container">
       <div class="service-card">
         <div class="service-image-wrapper">
           <img
-            src="Images/womanwithveggies.jpeg"
+            src="Images/WhatsApp Image 2026-01-16 at 15.42.51.jpeg"
             alt="Production of Fresh Farm Produce"
           />
         </div>
@@ -29,74 +29,78 @@
       <div class="service-card">
         <div class="service-image-wrapper">
           <img
-            src="Images/womanwithveggies.jpeg"
+            src="Images/Vegetable Garden Hacks.jpg"
             alt="Transformation & Conservation"
           />
         </div>
         <h2>Transformation & Conservation</h2>
-        <p>
-          Valorisation des produits agricoles par des procédés modernes.
-        </p>
-      </div>
-
-      <div class="service-card">
-        <div class="service-image-wrapper">
-          <img src="" alt="Logistics & Transportation" />
-        </div>
-        <h2>Logistique et Transport Agricole</h2>
-        <p>
-          Nous assurons la logistique et le transport des produits
-           agricoles sur le marché national et international.
-        </p>
-      </div>
-
-      <div class="service-card">
-        <div class="service-image-wrapper">
-          <img src="" alt="Import-Export" />
-        </div>
-        <h2>Import-Export</h2>
-        <p>
-          La commercialisation et distribution d'équipement, 
-          machines et intrants agricoles       
-         </p>
+        <p>Valorisation des produits agricoles par des procédés modernes.</p>
       </div>
 
       <div class="service-card">
         <div class="service-image-wrapper">
           <img
-            src="Images/womanwithveggies.jpeg"
+            src="Images/Untitled design (7).svg"
+            alt="Logistics & Transportation"
+          />
+        </div>
+        <h2>Logistique et Transport Agricole</h2>
+        <p>
+          Nous assurons la logistique et le transport des produits agricoles sur
+          le marché national et international.
+        </p>
+      </div>
+
+      <div class="service-card">
+        <div class="service-image-wrapper">
+          <img src="Images/cargo ship.jpg" alt="Import-Export" />
+        </div>
+        <h2>Import-Export</h2>
+        <p>
+          La commercialisation et distribution d'équipement, machines et
+          intrants agricoles
+        </p>
+      </div>
+
+      <div class="service-card">
+        <div class="service-image-wrapper">
+          <img
+            src="Images/Businesses Trust SDH.jpg"
             alt="Intermediation & Connection"
           />
         </div>
         <h2>Intermediation & Connexion</h2>
         <p>
-          Mise en place relation entre procducteurs, industries,
-          distributeurs et consommateurs.
+          Mise en place relation entre procducteurs, industries, distributeurs
+          et consommateurs.
         </p>
       </div>
 
       <div class="service-card">
         <div class="service-image-wrapper">
           <img
-            src="Images/womanwithveggies.jpeg"
+            src="Images/Formation et diversité _ clés du succès.jpg"
             alt="Training & Consultation"
           />
         </div>
         <h2>Formations & conseil</h2>
         <p>
-         Accompagnement technique et entrepreneurial des acteurs
-         du secture agricole.
+          Accompagnement technique et entrepreneurial des acteurs du secture
+          agricole.
         </p>
       </div>
 
       <div class="service-card">
         <div class="service-image-wrapper">
-          <img src="Images/womanwithveggies.jpeg" alt="General Marketing" />
+          <img
+            src="Images/New contract stock image_ Image of companionship, collaboration - 31601367.jpg"
+            alt="General Marketing"
+          />
         </div>
         <h2>Commercial générale</h2>
         <p>
-          Opérations diverses liées à l'import-export et aux
-           services commerciaux.
+          Opérations diverses liées à l'import-export et aux services
+          commerciaux.
         </p>
       </div>
     </section>
