--- a/mvpage.html
+++ b/mvpage.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <section class="hero">
-      <h1>Our Mission & Vision</h1>
+      <h1>Notre Mission & Vision</h1>
     </section>
 
     <div class="container">
       <div class="section">
-        <h2>Our Mission</h2>
+        <h2>Notre Mission</h2>
         <p>
           Produire, transformer et distribuer des fruits et légumes frais, sains
           et accessibles afin de contribuer activement à la sécurité alimentaire
@@ -22,7 +22,7 @@
       </div>
 
       <div class="section">
-        <h2>Our Vision</h2>
+        <h2>Notre Vision</h2>
         <p>
           Moderniser l'agriculture guinéenne par la qualité, la structuration et
           la coopération, tout en renforçant la sécurité alimentaire national et
@@ -31,7 +31,7 @@
       </div>
 
       <div class="section">
-        <h2>Our Values</h2>
+        <h2>Notre Valeurs</h2>
         <p>
           Nos valeurs reposent sur l'Accessibilité, l'Innovation, l'Engagement
           social et une Agriculture Durable, qui guident chacune de nos actions
@@ -40,30 +40,34 @@
 
         <div class="values">
           <div class="value-box">
-            <h3>Innovation & Sustainability</h3>
+            <h3>Innovation & Durabilité</h3>
             <p>
-              Promoting eco-friendly farming practices that protect our planet.
+              Nous développons des solutions innovantes pour améliorer la
+              productivité.
             </p>
           </div>
 
           <div class="value-box">
-            <h3>Transparency & Professionalism</h3>
+            <h3>Transparence & Professionalisme</h3>
             <p>
-              Promoting eco-friendly farming practices that protect our planet.
+              Honnêteté, transparence et professionnalisme dans toutes nos
+              opérations.
             </p>
           </div>
 
           <div class="value-box">
-            <h3>Partnerships & Inclusion</h3>
+            <h3>Partenariat & Inclusion</h3>
             <p>
-              Promoting eco-friendly farming practices that protect our planet.
+              Nous croyons à la collaboration et à l'impication de tous pour
+              réussir ensemble.
             </p>
           </div>
 
           <div class="value-box">
-            <h3>Respect for Environment and Rural Comunities</h3>
+            <h3>Respect de l'Environnement et des Communautés Rurales</h3>
             <p>
-              Promoting eco-friendly farming practices that protect our planet.
+              Nous protégeons la nature et soutenons le bien-être des
+              communautés rurales.
             </p>
           </div>
         </div>
